adding API swagger to FaqAPIController
